# cilly

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: bit_field.h  chip8.h  chip_8.h  platform.h
src/: chip8.c  chip8_opcodes.c  chip_8.c  main.c  platform.c
src/chip8/: chip8.c  chip8_opcodes.c  opcodes.c
tests/: performance_profiling.c  rom_loading  rom_loading.c
